--- a/TFLite.ipynb
+++ b/TFLite.ipynb
@@ -34,32 +34,8 @@
         "colab": {}
       },
       "source": [
-        "# !pip install tensorflow==2.0.0-beta0"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rvCKjvmkD0z4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# !pip install tf-nightly"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LL_UsFzfybFW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "# !pip install tensorflow==2.0.0-beta0\n",
+        "# !pip install tf-nightly\n",
         "# today tensorflow seems update and batchnormalization name scope is changed. I downgrade for a while\n",
         "# !pip install tensorflow==1.13.1"
       ],
@@ -97,17 +73,17 @@
       "metadata": {
         "id": "vm9V_horyUR6",
         "colab_type": "code",
-        "outputId": "f6e9b562-d10e-474e-b2be-dbcab43a2923",
+        "outputId": "f23ae8fa-0b1c-4d8a-c0e0-60198855994a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "print(tf.VERSION)\n",
         "# print(tf.__version__)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,8 +141,10 @@
         "#MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_convencdec_fixfutureleak/1561197058\"\n",
         "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_convencdec_enc256x13dec128x5/1561326828\"\n",
         "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_plain_dechidden256_fefix/1562225530\"\n",
+        "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_plain_encdecatten_pat2_trainopfix/1563243864\"\n",
+        "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/transformer_laynorm/1564579806\"\n",
         "\n",
-        "MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_plain_encdecatten_pat2_trainopfix/1563243864\""
+        "MODEL_DIR=\"gs://karino2-tegashiki/models/exports/transformer_pat3/1567335705\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -216,7 +194,7 @@
         "colab": {}
       },
       "source": [
-        "MAX_STROKE_NUM=22\n",
+        "MAX_STROKE_NUM=27\n",
         "MAX_ONE_STROKE_LEN=50\n",
         "INPUT_TYPE_DIM=3"
       ],
@@ -228,10 +206,10 @@
       "metadata": {
         "id": "fjxZojtez8my",
         "colab_type": "code",
-        "outputId": "5e7b393f-f81b-46da-a30e-4a08ee536fa0",
+        "outputId": "88755385-0945-4cd4-f5be-7dac14bc2f7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 277
         }
       },
       "source": [
@@ -244,22 +222,22 @@
         "tflite_quant_model = converter.convert()\n",
         "open(\"converted_model.tflite\", \"wb\").write(tflite_quant_model)"
       ],
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0716 02:30:01.340767 140673038223232 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/lite/python/convert_saved_model.py:60: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
+            "W0901 11:06:44.239546 140449644885888 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/lite/python/convert_saved_model.py:60: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n",
-            "W0716 02:30:03.082570 140673038223232 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "W0901 11:06:47.193852 140449644885888 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use standard file APIs to check for files with this prefix.\n",
-            "W0716 02:30:08.209443 140673038223232 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/lite/python/util.py:238: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+            "W0901 11:07:01.008836 140449644885888 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/lite/python/util.py:238: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
-            "W0716 02:30:08.211029 140673038223232 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/graph_util_impl.py:270: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+            "W0901 11:07:01.010302 140449644885888 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/graph_util_impl.py:270: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.compat.v1.graph_util.extract_sub_graph`\n"
           ],
@@ -269,13 +247,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "22985992"
+              "49406696"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 12
         }
       ]
     },
@@ -290,7 +268,10 @@
         "# TFLITE_MODEL_NAME=\"convencdec_enc256x13dec128x5.tflite\"\n",
         "# TFLITE_MODEL_NAME=\"plain_dechidden256_fefix.tflite\"\n",
         "\n",
-        "TFLITE_MODEL_NAME=\"plain_encdecatten_pat2_trainopfix.tflite\""
+        "# TFLITE_MODEL_NAME=\"plain_encdecatten_pat2_trainopfix.tflite\"\n",
+        "# TFLITE_MODEL_NAME=\"tranformer.tflite\"\n",
+        "\n",
+        "TFLITE_MODEL_NAME=\"tranformer_pat3.tflite\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -300,24 +281,24 @@
       "metadata": {
         "id": "mxUbdMie3qdG",
         "colab_type": "code",
-        "outputId": "708f56a1-0e3f-42f4-fe2d-f935060042c5",
+        "outputId": "c6631eb9-4f46-4551-9269-0d805be86b43",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
+          "height": 68
         }
       },
       "source": [
         "!cp converted_model.tflite {TFLITE_MODEL_NAME}\n",
         "!gsutil cp {TFLITE_MODEL_NAME} gs://karino2-tegashiki/models/mobile/"
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Copying file://plain_encdecatten_pat2_trainopfix.tflite [Content-Type=application/octet-stream]...\n",
-            "-\n",
-            "Operation completed over 1 objects/21.9 MiB.                                     \n"
+            "Copying file://tranformer_pat3.tflite [Content-Type=application/octet-stream]...\n",
+            "\\\n",
+            "Operation completed over 1 objects/47.1 MiB.                                     \n"
           ],
           "name": "stdout"
         }
@@ -328,16 +309,16 @@
       "metadata": {
         "id": "35Welxzh31ym",
         "colab_type": "code",
-        "outputId": "0479d108-78df-4c19-e5ae-2741322777dd",
+        "outputId": "276ef6fb-218e-418f-90ff-f60cf4a3c348",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 154
         }
       },
       "source": [
         "!gsutil ls gs://karino2-tegashiki/models/mobile/"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +326,11 @@
             "gs://karino2-tegashiki/models/mobile/convencdec_enc256x13dec128x5.tflite\n",
             "gs://karino2-tegashiki/models/mobile/convencdec_fixfutureleak.tflite\n",
             "gs://karino2-tegashiki/models/mobile/convencdec_myembed2.tflite\n",
-            "gs://karino2-tegashiki/models/mobile/convencdec_myembed_small.tflite\n"
+            "gs://karino2-tegashiki/models/mobile/convencdec_myembed_small.tflite\n",
+            "gs://karino2-tegashiki/models/mobile/plain_dechidden256_fefix.tflite\n",
+            "gs://karino2-tegashiki/models/mobile/plain_encdecatten_pat2_trainopfix.tflite\n",
+            "gs://karino2-tegashiki/models/mobile/tranformer.tflite\n",
+            "gs://karino2-tegashiki/models/mobile/tranformer_pat3.tflite\n"
           ],
           "name": "stdout"
         }
@@ -423,28 +408,28 @@
       "metadata": {
         "id": "Suj__mAGa9w0",
         "colab_type": "code",
-        "outputId": "47af3bec-d0fb-49a2-e202-574f343e6cd5",
+        "outputId": "b55fad9c-b183-46f9-faa0-51c0921cdde8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 200
+          "height": 188
         }
       },
       "source": [
         "interpreter.get_input_details()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'dtype': numpy.int32,\n",
-              "  'index': 209,\n",
+              "  'index': 4415,\n",
               "  'name': 'input_decoder',\n",
               "  'quantization': (0.0, 0),\n",
               "  'shape': array([ 1, 12], dtype=int32)},\n",
               " {'dtype': numpy.int32,\n",
-              "  'index': 213,\n",
+              "  'index': 4964,\n",
               "  'name': 'stroke_input',\n",
               "  'quantization': (0.0, 0),\n",
               "  'shape': array([ 1, 22, 50,  3], dtype=int32)}]"
@@ -462,24 +447,24 @@
       "metadata": {
         "id": "8chFeWS_bJu0",
         "colab_type": "code",
-        "outputId": "0a48420d-b94d-42c7-a36d-77959199ead0",
+        "outputId": "99419f48-61a7-4291-ba21-f78d4177b319",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 108
+          "height": 103
         }
       },
       "source": [
         "interpreter.get_output_details()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'dtype': numpy.float32,\n",
-              "  'index': 226,\n",
-              "  'name': 'time_distributed/Reshape_1',\n",
+              "  'index': 3990,\n",
+              "  'name': 'Reshape_85',\n",
               "  'quantization': (0.0, 0),\n",
               "  'shape': array([  1,  12, 115], dtype=int32)}]"
             ]
@@ -499,9 +484,9 @@
         "colab": {}
       },
       "source": [
-        "DECODER_INPUT_ID=209\n",
-        "STROKE_INPUT_ID=213\n",
-        "OUTPUT_ID=226"
+        "DECODER_INPUT_ID=4415\n",
+        "STROKE_INPUT_ID=4964\n",
+        "OUTPUT_ID=3990"
       ],
       "execution_count": 0,
       "outputs": []
@@ -596,28 +581,28 @@
       "metadata": {
         "id": "moHfwkX42ohU",
         "colab_type": "code",
+        "outputId": "fda254db-2cb6-4ce0-f93d-321bc99e2872",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "81fe57b3-b830-472d-82ca-bc2ad6a4f20d"
+          "height": 34
+        }
       },
       "source": [
         "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]))"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[37, 75, 34, 34, 34]"
+              "[37, 29, 114, 114, 114, 114, 114, 114, 114, 114, 114, 114]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 22
         }
       ]
     },
@@ -626,28 +611,28 @@
       "metadata": {
         "id": "LQCVs25m3FE2",
         "colab_type": "code",
+        "outputId": "ff6a4ef3-db38-4386-de94-4e6aebc47304",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "4b10dcfb-b2f6-4fef-8639-722125f50336"
+          "height": 34
+        }
       },
       "source": [
         "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]))"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[37, 29, 34, 34, 34]"
+              "[37, 29, 90, 47, 114, 114, 114, 114, 114, 114, 114, 114]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 23
         }
       ]
     },
@@ -656,28 +641,28 @@
       "metadata": {
         "id": "FgV3cfMV3pvd",
         "colab_type": "code",
+        "outputId": "80bcfb73-0802-4764-aecf-fa8363c806c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "0e791bcc-3003-48eb-e180-8e707b770c4d"
+          "height": 34
+        }
       },
       "source": [
         "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 0, 0, 0, 0, 0, 0, 0, 0, 0]))"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[37, 29, 34, 34, 34, 34, 34, 34, 47, 114, 114, 114]"
+              "[37, 29, 34, 109, 109, 114, 114, 114, 114, 114, 114, 114]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 24
         }
       ]
     },
@@ -686,46 +671,16 @@
       "metadata": {
         "id": "8xNknq_Q3pbq",
         "colab_type": "code",
+        "outputId": "4b9042ba-cbe4-4518-d3ce-32844965710f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "a9a921e6-b625-4825-99a9-e2fdfade0842"
+          "height": 34
+        }
       },
       "source": [
         "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 34, 0, 0, 0, 0, 0, 0, 0, 0]))"
       ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[37, 29, 34, 109, 47, 114, 114, 114, 114, 114, 114, 114]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "F3PS8Gj33pGq",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "a3716e23-7799-4653-de1f-289c5f785fc4"
-      },
-      "source": [
-        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 34, 109, 0, 0, 0, 0, 0, 0, 0]))"
-      ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -737,7 +692,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F3PS8Gj33pGq",
+        "colab_type": "code",
+        "outputId": "6f488073-d0d2-4bdd-87f9-5ab24f037e8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 34, 109, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 34, 109, 114, 114, 114, 114, 114, 114, 114, 114]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
         }
       ]
     },
@@ -759,16 +744,16 @@
       "metadata": {
         "id": "0_anePGm5OsO",
         "colab_type": "code",
+        "outputId": "39b1918a-1c5e-4cee-d889-cadf97f09f8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "39b1918a-1c5e-4cee-d889-cadf97f09f8a"
+        }
       },
       "source": [
         "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 31, 47, 54, 0, 0, 0, 0, 0, 0, 0]))"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,16 +774,16 @@
       "metadata": {
         "id": "Vvs0RsKB7N8r",
         "colab_type": "code",
+        "outputId": "1864569d-e041-4e34-e833-8f180173aadd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "1864569d-e041-4e34-e833-8f180173aadd"
+        }
       },
       "source": [
         "predict(interpreter, normalized, np.array([113, 37, 29, 47, 52, 62, 52, 114, 0, 0, 0, 0]))"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,16 +804,16 @@
       "metadata": {
         "id": "eG6rtEH73Ek2",
         "colab_type": "code",
+        "outputId": "ef4ef3f8-eb70-4ed2-8d27-ae5bc7cb4fae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "ef4ef3f8-eb70-4ed2-8d27-ae5bc7cb4fae"
+        }
       },
       "source": [
         "!ls -l converted_model.tflite"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
